# everythingisfake

./: Anchor.toml  package-lock.json  package.json  program-keypair.json  testnet-wallet.json
programs/abc-token/: Cargo.toml
programs/abc-token/src/: lib updates.txt  lib.rs  processor.rs  utils.rs
programs/abc-token/tests/: test_abc_token.rs
tests/: abc_token.rs
