[package]
name = "abc-token"
version = "0.1.0"
description = "Stealth launch token with anti-bot measures"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "abc_token"

[features]
default = ["local-testing"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
local-testing = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
solana-program = "1.16.16"  # Change this
solana-sdk = "1.16.16"      # 

[dev-dependencies]
solana-program-test = "1.16.16"
solana-sdk = "1.16.16"
spl-token = "3.4.0"
tokio = { version = "1.14.0", features = ["full"] }
