[package]
name = "abc-token"
version = "0.1.0"
description = "Stealth launch token with anti-bot measures"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "abc_token"

[features]
default = ["local-testing"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
local-testing = []

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
solana-program = "~1.9.13"
solana-sdk = "~1.9.13"

[dev-dependencies]
solana-program-test = "~1.9.13"
solana-sdk = "~1.9.13"
spl-token = "3.4.0"
tokio = { version = "1.14.0", features = ["full"] }
